@@ -1,7 +1,7 @@
-	$Id: VERSION,v 1.26 2009-09-10 08:32:26 guru Exp $
+	$Id: VERSION,v 1.27 2009-09-15 07:51:30 guru Exp $
 
 	GMT - The Generic Mapping Tools
 	===============================
 	
 Latest GMT version available from this site:	4.5.1
-Release date:					Sept. 15, 2009
+Release date:					Sept. 20, 2009
