@@ -1,5 +1,5 @@
 <HTML>
-<!--  $Id: gmt_faq.html,v 1.29 2009-07-07 21:57:17 guru Exp $  -->
+<!--  $Id: gmt_faq.html,v 1.30 2009-09-15 07:51:30 guru Exp $  -->
 <TITLE>GMT - Frequently Asked GMT Questions</TITLE>
 <BODY bgcolor="#ffffff">
 
@@ -10,11 +10,11 @@
 <LI>	<A> Who developed GMT ? </A>
 <P>GMT was created in 1988 by <A HREF="http://www.soest.hawaii.edu/pwessel/index.html">Paul Wessel</A>
 and <A HREF="http://ibis.grdl.noaa.gov/SAT/people/walter.html">Walter H. F. Smith</A>, and has undergone
-several revisions and major enhancements since then.  The current version is 4.5.0.
+several revisions and major enhancements since then.  The current version is 4.5.1.
 GMT is supported by the National Science Foundation.</P></LI>
 <HR>
 <LI>	<A> Who is using GMT ? </A>
-<P>As of July 2009 it appears that over 15,000 scientists and engineers worldwide are
+<P>As of September 2009 it appears that over 15,000 scientists and engineers worldwide are
 using GMT in their work.  This estimate is based on ftp traffic and returned
 registration forms over the last few
 years.  Most users of GMT are Earth scientists, but there are apparently no limits to
